# Solitare

./: CMakeLists.txt  README.md  header.h  main.cpp  source.cpp
SolitareGame/: CMakeLists.txt  Functions.cpp  SolitareGame.cpp  SolitareGame.h
